--- a/assets/hugodeveloper/css/style.css
+++ b/assets/hugodeveloper/css/style.css
@@ -101,3 +101,174 @@ a {
 .hd-sidebar > li:hover {
     background: #25aae1;
 }
+
+.hd-link-post {
+    text-decoration: none;
+    color:black;
+}
+
+.hd-text-description {
+    font-family: "Roboto Light";
+    color: grey;
+}
+
+.hd-text-date {
+    font-family: "Roboto Light";
+    font-size: .6em;
+    color: gray;
+}
+
+/*Rede Social*/
+.bar-social {
+    width: 100%;
+    height: 70px;
+    bottom: 0;
+    left: 0;
+}
+
+    .bar-social ul {
+        display: flex;
+        text-align: center;
+        height: inherit;
+        flex-wrap: wrap;
+        margin-left: -44px;        
+    }
+
+    .bar-social li {
+        flex: 1;
+        list-style: none;
+    }
+
+    .bar-social a {
+        display: block;
+        height: 70px;
+        width: 100%;
+        padding-top: 16px;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: 30%;
+        -moz-transition: background-size .10s linear;
+        -o-transition: background-size .10s linear;
+        -webkit-transition: background-size .10s linear;
+        transition: background-size .10s linear;
+    }
+
+.bar-social-twiiter {
+    background: rgb(42,169,224);
+}
+
+.bar-social-facebook {
+    background: rgb(65,94,155);
+}
+
+.bar-social-googleplus {
+    background: rgb(215,61,50);
+}
+
+.bar-social-linkedin {
+    background: rgb(1,119,181);
+}
+
+.bar-social-github {
+    background: rgb(51,51,51);
+}
+
+.btn-contact {
+    font-family: "Roboto Light";
+}
+
+.contact{
+    background-image: url('http://res.cloudinary.com/dbqu2plma/image/upload/v1478109021/hugodeveloper/img-contact-hugodeveloper.jpg');    
+}
+
+.contact-container {    
+    position: relative;
+    min-height: 360px;    
+    background-position: 50% 0px;
+    background-repeat: repeat;
+    background-attachment: fixed; 
+    border:none;
+}
+
+.contact-item {
+    background-color: rgba(255, 255, 255, .8);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.contact-content{
+    margin-top: 110px;
+}
+
+.contact-content > h2 > p {
+    font-family: 'Roboto Light';
+    color: #333333;
+}
+
+
+.banner { 
+    background-image: url('../../images/banner-hugodeveloper.jpg');
+    position: relative;
+    min-height: 500px;      
+    background-position: 50% 0px;
+    background-repeat: repeat;
+    background-attachment: fixed; 
+    background-size: 1280px 600px;
+    border:none;
+}
+
+.banner-content {
+    background: -webkit-linear-gradient( rgba(0,0,0,.2),  rgba(255,255,255,.6));
+    position:absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    
+}
+
+@media screen and (max-width: 768px) {
+    .banner-content {
+        background: -webkit-linear-gradient( rgba(248, 148, 30,.4),  rgba(37,170,225,.6));
+    }
+}
+
+.banner-item {
+    margin-top: 70px;
+}
+
+.banner-item > h1 {
+    font-family: 'Roboto Black';
+    padding-top: 16px; 
+    font-size: 4em;
+}
+
+.banner-item > h2 {
+    font-family: 'Roboto Light';
+}
+
+@media (max-width: 820px ) {
+
+    .banner-item > h1 {
+        font-size: 3em;
+    }
+}
+
+@media (max-width: 418px ) {
+
+    .banner-item > h1 {
+        padding-top: 10px; 
+        font-size: 2.6em;
+    }
+
+    .banner-item > h2 { 
+        font-size: 1.4em;
+    }
+}
+
+.scroll-down {
+    padding-top: 25px;
+}
